<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/loginMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingTop="16dp"
        android:autoLink="web"
        android:gravity="center"
        android:lineSpacingMultiplier="1.4"
        android:text="@string/login_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/loginMessageSub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:autoLink="web"
        android:gravity="center"
        android:lineSpacingMultiplier="1.4"
        android:text="@string/login_message_sub"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#6c6c6c"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/loginMessage" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loginAnimation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="atm.json"
        app:lottie_loop="false"
        app:layout_constraintTop_toTopOf="@id/loginMessage"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpGoogle"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_google"
        app:iconTint="#00FFFFFF"
        app:iconTintMode="add"
        app:cornerRadius="24dp"
        android:padding="16dp"
        android:background="#000"
        android:backgroundTint="#000"
        android:layout_marginBottom="48dp"
        android:text="@string/login_with_google"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>