<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:animateLayoutChanges="true"
    tools:context=".activities.ChatActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_chat_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="5dp"
        app:cardElevation="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp">

                <ImageView
                    android:id="@+id/userTextPhoto"
                    android:layout_width="48dp"
                    android:layout_height="48dp"/>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp">

                <TextView
                    android:id="@+id/userTextName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="#000"
                    android:layout_marginBottom="2dp"/>

                <TextView
                    android:id="@+id/userTextEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="16sp"
                    android:layout_marginBottom="2dp"/>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/chatsActivityNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="#FFF"
        app:cardCornerRadius="5dp"
        app:cardElevation="8dp"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/mcv_chat_header"
        android:focusableInTouchMode="true">

    <TextView
        android:layout_margin="16dp"
        android:id="@+id/chatsActivityNoteTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_chats"
        android:lineSpacingMultiplier="1.3"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:clickable="true"
        android:longClickable="true"/>

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatsPersonalRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/mcv_chat_footer"
        android:visibility="visible"
        android:clipToPadding="false"
        android:layout_marginBottom="8dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loadingMessagesPersonal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        android:visibility="gone"
        android:elevation="6dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loadingMessagesAnimationPersonal"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_marginBottom="56dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="rippleloading.json"
            app:lottie_loop="true" />

        <TextView
            android:id="@+id/loadingMessagesMsgPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:autoLink="web"
            android:gravity="center"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/loading_messages"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#6c6c6c"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/loadingMessagesAnimationPersonal"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emptyMessagesPersonal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/emptyMessagesAnimationPersonal"
            android:layout_width="144dp"
            android:layout_height="144dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="chatpop.json"
            app:lottie_loop="false" />

        <TextView
            android:id="@+id/emptyMessagesMsgPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autoLink="web"
            android:gravity="center"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/no_chats"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#6c6c6c"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/emptyMessagesAnimationPersonal" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_chat_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/messageUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                android:hint="@string/type_message"
                android:background="#00FFFFFF"
                android:textSize="18sp"
                android:textColor="#000"
                android:padding="12dp"
                android:gravity="center"/>


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/sendMessageAnimation"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:lottie_autoPlay="false"
                app:lottie_fileName="send.json"
                app:lottie_loop="false" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>