<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:animateLayoutChanges="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loadingMessagesList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="16dp"
        android:background="#FFF"
        android:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loadingMessagesAnimationList"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_marginBottom="56dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="rippleloading.json"
            app:lottie_loop="true" />

        <TextView
            android:id="@+id/loadingMessagesMsgList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:autoLink="web"
            android:gravity="center"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/loading_messages"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#6c6c6c"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/loadingMessagesAnimationList"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="5dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/appHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:fontFamily="@font/blogger"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/searchUsers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/search_user_text"
                android:background="#00FFFFFF"
                android:textSize="18sp"
                android:textColor="#000"
                android:padding="14dp"
                android:gravity="center"
                android:visibility="gone"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchResultRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mcv_header"
        android:layout_margin="8dp"
        android:elevation="8dp"
        android:outlineProvider="bounds"
        android:clipToPadding="false"
        android:visibility="gone"
        android:background="#FFF"/>

    <FrameLayout
        android:id="@+id/searchResultsFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="4dp"
        android:background="#88000000"
        android:visibility="gone"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="5dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/chats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="16dp"
                android:src="@drawable/ic_chat"
                android:background="#FFF" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/wallet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="16dp"
                android:src="@drawable/ic_wallet"
                android:layout_gravity="center"
                android:background="#FFF"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/setting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="16dp"
                android:src="@drawable/ic_setting"
                android:layout_gravity="center"
                android:background="#FFF"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/addPersonalChat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="16dp"
                android:src="@drawable/ic_add_personal"
                android:layout_gravity="center"
                android:background="#FFF"
                android:visibility="gone"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/addGroupChat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="16dp"
                android:src="@drawable/ic_add_group"
                android:layout_gravity="center"
                android:background="#FFF"
                android:visibility="gone"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/addChat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_add"
                    android:layout_gravity="center"
                    android:background="#FFF"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <FrameLayout
        android:id="@+id/chatContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"/>

    <FrameLayout
        android:id="@+id/walletContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"/>

    <FrameLayout
        android:id="@+id/settingContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>